--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,23 +7,26 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  cupertino_icons: ^0.1.2
   flutter:
     sdk: flutter
-
-  cupertino_icons: ^0.1.2
+  flutter_spinkit: ^5.1.0
+  geolocator: ^7.6.2
 
 dev_dependencies:
+  flutter_spinkit: ^5.1.0
   flutter_test:
     sdk: flutter
+  http: ^0.13.3
 
 flutter:
   uses-material-design: true
 
   assets:
-  - images/
+    - images/
 
   fonts:
-  - family: Spartan MB
-    fonts:
-    - asset: fonts/SpartanMB-Black.otf
-      weight: 900
+    - family: Spartan MB
+      fonts:
+        - asset: fonts/SpartanMB-Black.otf
+          weight: 900
